--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,4 +21,4 @@ steps:
     azureSubscription: 'newremitproject'
     appType: 'webApp'
     WebAppName: 'remitapp'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/*.zip'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
