--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,4 @@ steps:
     appType: 'webApp'
     WebAppName: 'remitapp'
     packageForLinux: '$(System.ArtifactsDirectory)/**/*.zip'
+- task: PublishBuildArtifacts@1    
