--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,5 +31,5 @@ steps:
     azureSubscription: 'newremitproject'
     appType: 'webApp'
     WebAppName: 'remitapp'
-    packageForLinux: '$(System.ArtifactsDirectory)/**/*zip'
+    packageForLinux: '$(System.ArtifactsDirectory)/**/*.zip'
 - task: PublishBuildArtifacts@1    
