--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,10 +42,10 @@ stages:
     #    downloadPath: '$(System.ArtifactsDirectory)'
     - task: Docker@2
       inputs:
-        containerRegistry: 'DockerRepo'
-        repository: 'AravDockerRepo'
-        command: 'buildAndPush'
-        Dockerfile: '**/Dockerfile'    
+       containerRegistry: 'DockerRepo'
+       repository: 'prab5674'
+       command: 'buildAndPush'
+       Dockerfile: '**/Dockerfile'
     #- task: AzureRmWebAppDeployment@4
     #  inputs:
     #    ConnectionType: 'AzureRM'
