Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,7 +45,7 @@ stages:
        containerRegistry: 'DockerRepo'
        repository: 'prab5674'
        command: 'buildAndPush'
-       Dockerfile: '**/Dockerfile'
+       Dockerfile: 'Dockerfile'
     #- task: AzureRmWebAppDeployment@4
     #  inputs:
     #    ConnectionType: 'AzureRM'
