--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,9 @@ stages:
       inputs:
         platform: '$(buildPlatform)'
         configuration: '$(buildConfiguration)'
+    - task: CmdLine@2
+      inputs:
+        script: 'docker build .'
     #- task: PublishBuildArtifacts@1
     #  inputs:
     #    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
@@ -40,12 +43,12 @@ stages:
     #    buildType: 'current'
     #    downloadType: 'specific'
     #    downloadPath: '$(System.ArtifactsDirectory)'
-    - task: Docker@2
-      inputs:
-       containerRegistry: 'DockerRepo'
-       repository: 'prab5674'
-       command: 'buildAndPush'
-       Dockerfile: 'Dockerfile'
+    #- task: Docker@2
+    #  inputs:
+    #   containerRegistry: 'DockerRepo'
+    #   repository: 'prab5674'
+    #   command: 'buildAndPush'
+    #   Dockerfile: 'Dockerfile'
     #- task: AzureRmWebAppDeployment@4
     #  inputs:
     #    ConnectionType: 'AzureRM'
