Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,4 +26,9 @@ stages:
         command: build
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
         tags: |
-          $(tag)
+    - task: Docker@2
+      inputs:
+        containerRegistry: 'DockerRepo'
+        command: 'push'
+       
+
