--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -37,3 +37,10 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
+    - task: AzureRmWebAppDeployment@4
+      inputs:
+        ConnectionType: 'AzureRM'
+        azureSubscription: 'Azure subscription 1(71a85bf9-3373-4ef1-a17f-5714423bc0fd)'
+        appType: 'webAppLinux'
+        WebAppName: 'newarav'
+        packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
