--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -43,4 +43,4 @@ stages:
         azureSubscription: 'Azure subscription 1(71a85bf9-3373-4ef1-a17f-5714423bc0fd)'
         appType: 'webAppLinux'
         WebAppName: 'newarav'
-        packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+        packageForLinux: '$(System.DefaultWorkingDirectory)/*.zip'
